Simply finished User and Group model

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,9 @@
+### 專案設定
 APP_ENV=local
 APP_DEBUG=true
 APP_KEY=SomeRandomString
 
+### 資料庫設定
 DB_HOST=localhost
 DB_DATABASE=homestead
 DB_USERNAME=homestead
@@ -9,11 +11,15 @@ DB_PASSWORD=secret
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
-QUEUE_DRIVER=sync
 
+### 郵件設定
 MAIL_DRIVER=smtp
-MAIL_HOST=mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_FROM_ADDRESS=(null)
+MAIL_FROM_NAME=(null)
+MAIL_PRETEND=false      # 若為true，則以寫入log代替實際寄信
+
+### SMTP設定
+MAIL_HOST=smtp.mailgun.org
+MAIL_PORT=587
+MAIL_USERNAME=(null)
+MAIL_PASSWORD=(null)
