Finished Vote System

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
     "require": {
         "php": ">=5.5.9",
         "laravel/framework": "5.1.*",
-        "laravelcollective/html": "~5.0"
+        "laravelcollective/html": "~5.0",
+        "alfredo-ramos/parsedown-extra-laravel": "~0.2",
+        "nesbot/carbon": "~1.14"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
