--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravelcollective/html": "~5.0",
         "alfredo-ramos/parsedown-extra-laravel": "~0.2",
         "nesbot/carbon": "~1.14",
-        "guzzlehttp/guzzle": "~6.0"
+        "guzzlehttp/guzzle": "~6.0",
+        "barryvdh/laravel-ide-helper": "^2.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
