Miraculously fix magical bug completely. Rename 'visible' to 'show' which duplicate to protected variable.

--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "alfredo-ramos/parsedown-extra-laravel": "~0.2",
         "nesbot/carbon": "~1.14",
         "guzzlehttp/guzzle": "~6.0",
-        "barryvdh/laravel-ide-helper": "^2.0"
+        "barryvdh/laravel-ide-helper": "^2.0",
+        "doctrine/dbal": "~2.3"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
