--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "guzzlehttp/guzzle": "~6.0",
         "barryvdh/laravel-ide-helper": "^2.0",
         "doctrine/dbal": "~2.3",
-        "rap2hpoutre/laravel-log-viewer": "^0.4.0"
+        "rap2hpoutre/laravel-log-viewer": "^0.4.0",
+        "backup-manager/laravel": "^1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
