--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "barryvdh/laravel-ide-helper": "^2.0",
         "doctrine/dbal": "~2.3",
         "rap2hpoutre/laravel-log-viewer": "^0.4.0",
-        "backup-manager/laravel": "^1.0"
+        "backup-manager/laravel": "^1.0",
+        "graham-campbell/throttle": "^4.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
