--- a/.gitignore
+++ b/.gitignore
@@ -27,4 +27,4 @@ _ide_helper.php
 /public/js/analyticstracking.js
 
 #Google Search Console
-/public/googlead5716365e61e11d.html
+/public/google*.html
