Enable Gzip for most text file
http://salscode.com/tutorials/2009/10/15/gzip-htaccess/

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -20,4 +20,10 @@
     # Handle Front Controller...
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ index.php [L]
+
+    # Gzip
+    # Need to Enable deflate_module filter_module
+    <ifmodule mod_deflate.c>
+        AddOutputFilterByType DEFLATE text/text text/html text/plain text/xml text/css application/x-javascript application/javascript text/javascript
+    </ifmodule>
 </IfModule>
