--- a/composer.json
+++ b/composer.json
@@ -45,6 +45,7 @@
     },
     "scripts": {
         "post-install-cmd": [
+            "Illuminate\\Foundation\\ComposerScripts::postInstall",
             "php artisan clear-compiled",
             "php artisan optimize"
         ],
@@ -52,6 +53,7 @@
             "php artisan clear-compiled"
         ],
         "post-update-cmd": [
+            "Illuminate\\Foundation\\ComposerScripts::postUpdate",
             "php artisan clear-compiled",
             "php artisan ide-helper:generate",
             "php artisan optimize"
