--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,8 @@
             "database"
         ],
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "Hackersir\\": "app/Hackersir"
         }
     },
     "autoload-dev": {
