--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ before_script:
   - cp .env.travis .env
   - composer self-update
   - composer install --prefer-dist --optimize-autoloader --quiet
+  - composer dumpautoload
   - mysql -e 'CREATE DATABASE homestead_test;'
   - php artisan migrate
 
