--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "guzzlehttp/guzzle": "~6.0",
         "barryvdh/laravel-ide-helper": "^2.0",
         "doctrine/dbal": "~2.3",
-        "rap2hpoutre/laravel-log-viewer": "^0.4.0",
+        "arcanedev/log-viewer": "~3.0",
         "backup-manager/laravel": "^1.0",
         "graham-campbell/throttle": "^5.2",
         "zizaco/entrust": "dev-laravel-5",
