--- a/.env.example
+++ b/.env.example
@@ -16,11 +16,10 @@ SESSION_DRIVER=file
 MAIL_DRIVER=smtp
 MAIL_FROM_ADDRESS=(null)
 MAIL_FROM_NAME=(null)
-MAIL_PRETEND=false      # 若為true，則以寫入log代替實際寄信
 
 ### SMTP設定
-MAIL_HOST=smtp.mailgun.org
-MAIL_PORT=587
+MAIL_HOST=mailtrap.io
+MAIL_PORT=2525
 MAIL_USERNAME=(null)
 MAIL_PASSWORD=(null)
 
