--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "graham-campbell/throttle": "^5.2",
         "zizaco/entrust": "dev-laravel-5",
         "devfactory/minify": "1.0.*",
-        "recca0120/laravel-tracy": "^1.6"
+        "recca0120/laravel-tracy": "^1.6",
+        "lavary/laravel-menu": "dev-master"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
